# fasteigenpy

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  compare.py  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
include/fasteigenpy/: cod.hpp  info.hpp  ldlt.hpp  llt.hpp  selfadjointeigensolver.hpp
src/: main.cpp
src/fasteigenpy/: __init__.py
tests/: test_compiled.py  test_package.py
